--- a/css/styles.css
+++ b/css/styles.css
@@ -91,19 +91,20 @@ h1 {text-align: center;}
 }
 
 
-// No media query for `xs` since this is the default in Bootstrap
+/* No media query for `xs` since this is the default in Bootstrap*/
 
-// Small devices (landscape phones, 576px and up)
+/* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) { ... }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {.row > div > article {
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .row > div > article {
     width: 80%;
     margin: 20px auto 0;
 } }
 
-// Large devices (desktops, 992px and up)
+/* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) { ... }
 
-// Extra large devices (large desktops, 1200px and up)
+/* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { ... }
