changes changes and more changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 
 #chicken {
     background-color: darkgray;
-    margin: 2px;px;
+    margin: 2px;
     height: 100%;
     
     position: relative;
